# bookworm

./: .gitignore  CODE_OF_CONDUCT.md  NOTES.md  pyproject.toml  requirements.txt
.github/workflows/: changelog.yml
bookworm/: bookworm.py
bookworm/api/core/class/cfiltering/: itembased.py
bookworm/api/decorator/: log.py  logIt.py
bookworm/api/middleware/: aLogRequests.py  aTimer.py  aTimestamp.py
bookworm/api/model/: health.py
bookworm/api/router/: health.py
bookworm/api/service/: akeyless.py  customLog.py
bookworm/config/: settings.py
