[tool.poetry]
name = "bookworm"
version = "0.1.0"
description = ""
authors = ["Didier Leonard-Jean Charles <didijc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.12.0"
colorama = "^0.4.6"
celery = "^5.2.7"
fastapi = "^0.88.0"
pytest = "^7.2.0"
PyYAML = "^6.0"
requests = "^2.28.1"
scipy = "^1.9.3"
numpy = "^1.23.5"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
d3 = "^0.1.0"
pydantic = "^1.10.2"
uvicorn = "^0.20.0"
pandas = "^1.5.2"
surprise = "^0.1"
sklearn = "^0.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
