[tool.poetry]
name = "bookworm"
version = "0.1.0"
description = ""
authors = ["Didier Leonard-Jean Charles <didijc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.12.0"
colorama = "^0.4.6"
celery = "^5.2.7"
fastapi = "^0.88.0"
pytest = "^7.2.0"
PyYAML = "^6.0"
requests = "^2.28.1"
scipy = "^1.9.3"
numpy = "^1.23.5"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
pydantic = "^1.10.2"
uvicorn = "^0.20.0"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
pylint = "^2.15.8"
gunicorn = "^20.1.0"
logtail-python = "^0.1.3"
python-dotenv = "^0.21.0"
hvac = "^1.0.2"
akeyless = "^3.2.3"
mypy = "^1.0.0"
psycopg = "^3.1.8"
psycopg-binary = "^3.1.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
